fix amount dimensions squashed

--- a/custom-elements/taskbar/task.css
+++ b/custom-elements/taskbar/task.css
@@ -160,9 +160,8 @@
     aspect-ratio: 1/1;
     color: white;
     font-weight: 900;
-    padding: 10px;
-    width: 0;
-    height: 0;
+    width: 20px;
+    height: 20px;
     opacity: 0;
     transition: 0.3s;
     pointer-events: none;
